--- a/package.json
+++ b/package.json
@@ -30,5 +30,5 @@
   "bugs": {
     "url": "https://github.com/Shobes1421/Portfolio/issues"
   },
-  "homepage": "https://shobes1421.github.io/Portfolio/"
+  "homepage": "https://shobes1421.github.io/Portfolio/about"
 }
